# Markdown-Manager

./: .gitignore  CMakeLists.txt  README.md  full.sh
.github/workflows/: github-actions-demo.yml  unitTests.yml
include/: BoldElement.hpp  Element.hpp  HTMLRenderer.hpp  HeaderElement.hpp  HighlightedElement.hpp  ItalicElement.hpp  LineElement.hpp  RenderInterface.hpp  Scanner.hpp  StrikethroughElement.hpp  TextElement.hpp
src/: CMakeLists.txt  Element.hpp  HeaderElement.hpp  Scanner.cpp  TextElement.cpp  TextElement.hpp  app.cpp  app2.c  app2.h  example.md  scanner.cpp  scanner.hpp
src/elements/: BoldElement.cpp  Element.cpp  HeaderElement.cpp  HighlightedElement.cpp  ItalicElement.cpp  LineElement.cpp  StrikethroughElement.cpp  TextElement.cpp
src/renderers/: HTMLRenderer.cpp
tests/: CMakeLists.txt  ElementTests.cpp  RunAllTests.cpp  ScannerTests.cpp  sample.cpp  test.md
